--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
 </head>
 <body>
-    <h1>欢迎来到首页</h1>
+    <h1 th:text="${username}+'，欢迎来到首页'"></h1>
 </body>
 </html>
