--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,11 @@
   <link rel="stylesheet" type="text/css" href="/plugins/fontawesome-free/css/all.min.css">
   <!-- icheck bootstrap -->
   <link rel="stylesheet" type="text/css" href="/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- SweetAlert2 -->
-  <link rel="stylesheet" href="/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
   <!-- Toastr -->
   <link rel="stylesheet" href="/plugins/toastr/toastr.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" type="text/css" href="/css/adminlte.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/customize/iconfont.css">
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
@@ -26,14 +25,15 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">登录</p>
+      <p class="login-box-msg" th:text="登录"></p>
+      <p class="login-box-msg" th:if="${param.error != null}" th:text="用户名或者密码错误"></p>
 
-      <form action="/form" method="post">
+      <form id="form" th:action="@{/form}" method="post">
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="用户名" name="username" id="username">
           <div class="input-group-append">
             <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
+              <span class="iconfont icon-user"></span>
             </div>
           </div>
         </div>
@@ -41,7 +41,7 @@
           <input type="password" class="form-control" placeholder="密码" name="password" id="password">
           <div class="input-group-append">
             <div class="input-group-text">
-              <span class="fas fa-lock"></span>
+              <span class="iconfont icon-mima"></span>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" id="login-button" class="btn btn-primary btn-block">登录</button>
+            <button type="submit" onclick="return false" id="login-button" class="btn btn-primary btn-block">登录</button>
           </div>
           <!-- /.col -->
         </div>
@@ -89,8 +89,6 @@
 <script src="/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- SweetAlert2 -->
-<script src="/plugins/sweetalert2/sweetalert2.min.js"></script>
 <!-- Toastr -->
 <script src="/plugins/toastr/toastr.min.js"></script>
 <!-- AdminLTE App -->
@@ -100,26 +98,18 @@
 
 <script>
   $(function() {
-    var Toast = Swal.mixin({
-      toast: true,
-      position: 'top-end',
-      showConfirmButton: false,
-      timer: 3000
-    });
 
     $('#login-button').click(function() {
       if ($('#username').val() === '') {
-        // alert('用户名不得为空！');
         toastr.error('用户名不得为空！')
         return;
       }
       if ($('#password').val() === '') {
-        // alert('密码不得为空！');
         toastr.error('密码不得为空！')
         return;
       }
-      toastr.success('Lorem ipsum dolor sit amet, consetetur sadipscing elitr.')
-
+      // toastr.success('Lorem ipsum dolor sit amet, consetetur sadipscing elitr.')
+      $('#form').submit();
     });
   });
 </script>
