--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -30,7 +30,7 @@
 <div class="wrapper">
 
     <div th:replace="common/header :: navbar"></div>
-    <div th:replace="common/sidebar :: navbar('/blog','/tag')"></div>
+    <div th:replace="common/sidebar :: navbar('/blog','/article')"></div>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
