--- a/src/main/resources/templates/blog/tag.html
+++ b/src/main/resources/templates/blog/tag.html
@@ -101,7 +101,12 @@
                                                 <label>&#12288;</label>
                                                 <button type="button" class="btn btn-block btn-primary">查询</button>
                                             </div>
-
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <div class="form-group">
+                                                <label>&#12288;</label>
+                                                <button type="button" class="btn btn-block btn-primary">新增</button>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -123,6 +128,7 @@
                                                             <th>状态</th>
                                                             <th>创建时间</th>
                                                             <th>创建人</th>
+                                                            <th>操作</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
@@ -134,6 +140,8 @@
                                                             <td th:text="${tag.tagStatus}"></td>
                                                             <td th:text="${tag.createTime}"></td>
                                                             <td th:text="${tag.creatorId}"></td>
+                                                            <td><button type="button" class="btn btn-block btn-primary">编辑</button>
+                                                                <button type="button" class="btn btn-block btn-primary">删除</button></td>
                                                         </tr>
                                                         </tbody>
                                                         <tfoot>
@@ -145,6 +153,7 @@
                                                             <th>状态</th>
                                                             <th>创建时间</th>
                                                             <th>创建人</th>
+                                                            <th>操作</th>
                                                         </tr>
                                                         </tfoot>
                                                     </table>
