保存修改处理

--- a/src/main/resources/templates/blog/tag.html
+++ b/src/main/resources/templates/blog/tag.html
@@ -25,6 +25,10 @@
     <link rel="stylesheet" href="/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
     <link rel="stylesheet" href="/plugins/summernote/summernote-bs4.min.css">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -105,7 +109,7 @@
                                         <div class="col-sm-1">
                                             <div class="form-group">
                                                 <label>&#12288;</label>
-                                                <button type="button" class="btn btn-block btn-primary">新增</button>
+                                                <button type="button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#modal-default">新增</button>
                                             </div>
                                         </div>
                                     </div>
@@ -140,8 +144,16 @@
                                                             <td th:text="${tag.tagStatus}"></td>
                                                             <td th:text="${tag.createTime}"></td>
                                                             <td th:text="${tag.creatorId}"></td>
-                                                            <td><button type="button" class="btn btn-block btn-primary">编辑</button>
-                                                                <button type="button" class="btn btn-block btn-primary">删除</button></td>
+                                                            <td>
+                                                                <div class="margin">
+                                                                    <div class="btn-group">
+                                                                        <button type="button" class="btn btn-warning">编辑</button>
+                                                                    </div>
+                                                                    <div class="btn-group">
+                                                                        <button type="button" class="btn btn-danger">删除</button>
+                                                                    </div>
+                                                                </div>
+                                                            </td>
                                                         </tr>
                                                         </tbody>
                                                         <tfoot>
@@ -167,6 +179,29 @@
                     </div>
                 </div>
             </div>
+
+            <div class="modal fade" id="modal-default">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">新增标签</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>hello 马伯伯</p>
+                        </div>
+                        <div class="modal-footer justify-content-between">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            <button type="button" class="btn btn-primary">保存</button>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+            <!-- /.modal -->
         </section>
     </div>
     <div th:replace="common/footer :: copy"></div>
