add jquery form js

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,7 +77,7 @@
 <!--        <a href="forgot-password.html">忘记密码</a>-->
 <!--      </p>-->
       <p class="mb-0">
-        <a href="register.html" class="text-center">注册成为新用户</a>
+        <a th:href="@{/register}" class="text-center">注册成为新用户</a>
       </p>
     </div>
     <!-- /.login-card-body -->
@@ -87,7 +87,7 @@
 
 <!-- jQuery -->
 <script src="/plugins/jquery/jquery.min.js"></script>
-<script src="/plugins/jquery/jquery.form.min.js"></script>
+<script src="/plugins/jquery/jquery.form.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Toastr -->
@@ -95,10 +95,41 @@
 <!-- AdminLTE App -->
 <script src="/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="/js/demo.js"></script>
+<!--<script src="/js/demo.js"></script>-->
 
 <script>
   $(function() {
+
+    var options = {
+      target: '#output',          //把服务器返回的内容放入id为output的元素中
+      beforeSubmit: showRequest,  //提交前的回调函数
+      success: showResponse,      //提交后的回调函数
+      //url: url,                 //默认是form的action， 如果申明，则会覆盖
+      //type: type,               //默认是form的method（get or post），如果申明，则会覆盖
+      //dataType: null,           //html(默认), xml, script, json...接受服务端返回的类型
+      //clearForm: true,          //成功提交后，清除所有表单元素的值
+      //resetForm: true,          //成功提交后，重置所有表单元素的值
+      timeout: 3000               //限制请求的时间，当请求大于3秒后，跳出请求
+    };
+
+    function showRequest(formData, jqForm, options){
+      //formData: 数组对象，提交表单时，Form插件会以Ajax方式自动提交这些数据，格式如：[{name:user,value:val },{name:pwd,value:pwd}]
+      //jqForm:   jQuery对象，封装了表单的元素
+      //options:  options对象
+      const queryString = $.param(formData);   //name=1&address=2
+      const formElement = jqForm[0];              //将jqForm转换为DOM对象
+      const username = formElement.username.value;  //访问jqForm的DOM元素
+      return true;  //只要不返回false，表单都会提交,在这里可以对表单元素进行验证
+    };
+
+    function showResponse(responseText, statusText){
+      //dataType=xml
+      const name = $('name', responseXML).text();
+      const address = $('address', responseXML).text();
+      $("#xmlout").html(name + "  " + address);
+      //dataType=json
+      $("#jsonout").html(data.name + "  " + data.address);
+    };
 
     $('#login-button').click(function() {
       if ($('#username').val() === '') {
@@ -110,10 +141,8 @@
         return;
       }
       // toastr.success('Lorem ipsum dolor sit amet, consetetur sadipscing elitr.')
-      $('#form').submit();
-
-
-
+      $('#form').ajaxSubmit(options);
+      return false; //阻止表单默认提交
     });
   });
 </script>
