--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -101,9 +101,9 @@
   $(function() {
 
     var options = {
-      target: '#info',          //把服务器返回的内容放入id为output的元素中
-      beforeSubmit: showRequest,  //提交前的回调函数
-      success: showResponse,      //提交后的回调函数
+      // target: '#info',          //把服务器返回的内容放入id为output的元素中
+      beforeSubmit: dataCheck,  //提交前的回调函数
+      success: callback,      //提交后的回调函数
       //url: url,                 //默认是form的action， 如果申明，则会覆盖
       //type: type,               //默认是form的method（get or post），如果申明，则会覆盖
       //dataType: null,           //html(默认), xml, script, json...接受服务端返回的类型
@@ -112,7 +112,7 @@
       timeout: 3000               //限制请求的时间，当请求大于3秒后，跳出请求
     };
 
-    function showRequest(formData, jqForm, options){
+    function dataCheck(formData, jqForm, options){
       const formElement = jqForm[0];              //将jqForm转换为DOM对象
       const username = formElement.username.value;  //访问jqForm的DOM元素
       const password = formElement.password.value;  //访问jqForm的DOM元素
@@ -124,24 +124,18 @@
         toastr.error('密码不得为空！')
         return false;
       }
-      return true;  //只要不返回false，表单都会提交,在这里可以对表单元素进行验证
+      return true;
     };
 
-    function showResponse(responseText, statusText){
-      toastr.error('xxix！')
-      //dataType=xml
-      const name = $('name', responseXML).text();
-      const address = $('address', responseXML).text();
-      $("#xmlout").html(name + "  " + address);
-      //dataType=json
-      $("#jsonout").html(data.name + "  " + data.address);
+    function callback(responseText, statusText){
+      toastr.error(responseText)
     };
 
+    // 单击
     $('#login-button').click(function() {
-
-      // toastr.success('Lorem ipsum dolor sit amet, consetetur sadipscing elitr.')
       $('#form').ajaxSubmit(options);
-      return false; //阻止表单默认提交
+      //阻止表单默认提交
+      return false;
     });
   });
 </script>
