--- a/src/main/resources/templates/blog/tag.html
+++ b/src/main/resources/templates/blog/tag.html
@@ -148,7 +148,7 @@
                                                             <td>
                                                                 <div class="margin">
                                                                     <div class="btn-group">
-                                                                        <button type="button" class="btn btn-warning" id="">编辑</button>
+                                                                   k     <button type="button" class="btn btn-warning" id="">编辑</button>
                                                                     </div>
                                                                     <div class="btn-group">
                                                                         <button type="button" class="btn btn-danger">删除</button>
