--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,8 +102,8 @@
 <!-- AdminLTE App -->
 <script src="/js/adminlte.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="/js/demo.js"></script>
+<!--<script src="/js/demo.js"></script>-->
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="/js/pages/dashboard.js"></script>
+<!--<script src="/js/pages/dashboard.js"></script>-->
 </body>
 </html>
