--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
   <div class="card">
     <div class="card-body login-card-body">
       <p class="login-box-msg" th:text="登录"></p>
-      <p id="info" class="login-box-msg" th:if="${param.error != null}" th:text="用户名或者密码错误"></p>
+      <p id="err-info" class="login-box-msg" th:if="${param.error != null}" th:text="'用户名或者密码错误！'"></p>
 
       <form id="form" th:action="@{/form}" method="post">
         <div class="input-group mb-3">
@@ -99,20 +99,8 @@
 
 <script>
   $(function() {
-
-    var options = {
-      // target: '#info',          //把服务器返回的内容放入id为output的元素中
-      beforeSubmit: dataCheck,  //提交前的回调函数
-      success: callback,      //提交后的回调函数
-      //url: url,                 //默认是form的action， 如果申明，则会覆盖
-      //type: type,               //默认是form的method（get or post），如果申明，则会覆盖
-      //dataType: null,           //html(默认), xml, script, json...接受服务端返回的类型
-      //clearForm: true,          //成功提交后，清除所有表单元素的值
-      //resetForm: true,          //成功提交后，重置所有表单元素的值
-      timeout: 3000               //限制请求的时间，当请求大于3秒后，跳出请求
-    };
-
-    function dataCheck(formData, jqForm, options){
+    // 数据校验
+    const dataCheck = function (formData, jqForm, options) {
       const formElement = jqForm[0];              //将jqForm转换为DOM对象
       const username = formElement.username.value;  //访问jqForm的DOM元素
       const password = formElement.password.value;  //访问jqForm的DOM元素
@@ -127,8 +115,30 @@
       return true;
     };
 
-    function callback(responseText, statusText){
-      toastr.error(responseText)
+    // 调用成功后回调函数
+    const callback = function(responseText, statusText){
+      if (statusText != "success") {
+        toastr.error("登录失败！")
+        return false;
+      }
+      const errInfo = $(responseText).find('#err-info').text();
+      if (errInfo != "") {
+        toastr.error(errInfo);
+        return false;
+      }
+      window.location.href='/index';
+    };
+
+    const options = {
+      // target: '#info',          //把服务器返回的内容放入id为output的元素中
+      beforeSubmit: dataCheck,  //提交前的回调函数
+      success: callback,      //提交后的回调函数
+      //url: url,                 //默认是form的action， 如果申明，则会覆盖
+      //type: type,               //默认是form的method（get or post），如果申明，则会覆盖
+      // dataType: "json",           //html(默认), xml, script, json...接受服务端返回的类型
+      //clearForm: true,          //成功提交后，清除所有表单元素的值
+      //resetForm: true,          //成功提交后，重置所有表单元素的值
+      timeout: 3000               //限制请求的时间，当请求大于3秒后，跳出请求
     };
 
     // 单击
@@ -137,6 +147,7 @@
       //阻止表单默认提交
       return false;
     });
+
   });
 </script>
 </body>
