--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
 
 <!-- jQuery -->
 <script src="/plugins/jquery/jquery.min.js"></script>
-<script src="/plugins/jquery/jquery.form.js"></script>
+<script src="/plugins/jquery/jquery.form.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Toastr -->
