--- a/src/main/resources/templates/blog/tag.html
+++ b/src/main/resources/templates/blog/tag.html
@@ -111,7 +111,7 @@
                                         <div class="col-sm-1">
                                             <div class="form-group">
                                                 <label>&#12288;</label>
-                                                <button type="button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#modal-default">新增</button>
+                                                <button type="button" class="btn btn-block btn-primary" data-toggle="modal" data-target="#modal-add">新增</button>
                                             </div>
                                         </div>
                                     </div>
@@ -152,10 +152,10 @@
                                                             <td>
                                                                 <div class="margin">
                                                                     <div class="btn-group">
-                                                                        <button type="button" class="btn btn-warning" id="">编辑</button>
+                                                                        <button type="button" class="btn btn-warning" id="edit-button" data-toggle="modal" data-target="#modal-edit">编辑</button>
                                                                     </div>
                                                                     <div class="btn-group">
-                                                                        <button type="button" class="btn btn-danger">删除</button>
+                                                                        <button type="button" class="btn btn-danger" id="delete-button" th:onclick="|deleteTag(${tag.id})|">删除</button>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="modal-default">
+            <div class="modal fade" id="modal-add">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -217,6 +217,49 @@
             </div>
             <!-- /.modal -->
 
+            <div class="modal fade" id="modal-edit">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">编辑标签</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="col-md-12">
+                                <!-- general form elements -->
+                                <div class="card card-primary">
+                                    <!-- form start -->
+                                    <form id="edit-form" th:action="@{/blog/tag/edit}">
+                                        <div class="card-body">
+                                            <div class="form-group">
+                                                <label>标签名称</label>
+                                                <input type="text" class="form-control" placeholder="" id="edit-tagName" name="edit-tagName">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>排序</label>
+                                                <input type="text" class="form-control" placeholder="" id="edit-priority" name="edit-priority">
+                                            </div>
+                                            <div class="form-group">
+                                                <label>优先级</label>
+                                                <input type="text" class="form-control" placeholder="" id="edit-tagOrder" name="edit-tagOrder">
+                                            </div>
+                                        </div>
+                                        <!-- /.card-body -->
+                                        <div class="card-footer">
+                                            <button type="submit" class="btn btn-primary" id="submit-button">提交</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+            <!-- /.modal -->
             <div id="err-info" style="display: none" th:text="${errorInfo}"></div>
         </section>
     </div>
@@ -277,6 +320,10 @@
 <script src="/plugins/datatables-buttons/js/buttons.print.min.js"></script>
 <script src="/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 <script>
+    function deleteTag(id) {
+        alert(id);
+    }
+
     $(function () {
         //Date range picker
         $('#reservation').daterangepicker({
@@ -346,7 +393,6 @@
             //阻止表单默认提交
             return false;
         });
-
     })
 </script>
 </body>
