--- a/src/main/resources/templates/blog/tag.html
+++ b/src/main/resources/templates/blog/tag.html
@@ -155,7 +155,7 @@
                                                                         <button type="button" class="btn btn-warning" id="edit-button" data-toggle="modal" data-target="#modal-edit">编辑</button>
                                                                     </div>
                                                                     <div class="btn-group">
-                                                                        <button type="button" class="btn btn-danger" id="delete-button" th:onclick="|deleteTag(${tag.id})|">删除</button>
+                                                                        <button type="button" class="btn btn-danger" id="delete-button" data-toggle="modal" data-target="#modal-delete">删除</button>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -253,6 +253,28 @@
                                     </form>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="modal-delete">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">删除</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>是否删除该条记录?</p>
+                        </div>
+                        <div class="modal-footer justify-content-between">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="button" class="btn btn-primary">确定</button>
                         </div>
                     </div>
                     <!-- /.modal-content -->
